RESOLVED FIXED96603
[Qt][WK2] Memory leaks in Qt's TestRunner
https://bugs.webkit.org/show_bug.cgi?id=96603
Summary [Qt][WK2] Memory leaks in Qt's TestRunner
Sudarsana Nagineni (babu)
Reported 2012-09-12 22:47:18 PDT
WkString created with WKStringCreateWithQString() is leaking in TestController::initializeInjectedBundlePath(). ==31701== 24 bytes in 1 blocks are definitely lost in loss record 2,310 of 8,474 ==31701== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==31701== by 0x7166E6E: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==31701== by 0x55EF2D6: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==31701== by 0x560DCC8: WebKit::WebString::create(WTF::String const&) (WebString.h:50) ==31701== by 0x560DDCC: WebKit::toCopiedAPI(WTF::String const&) (WKSharedAPICast.h:149) ==31701== by 0x566949D: WKStringCreateWithQString(QString const&) (WKStringQt.cpp:34) ==31701== by 0x412CF5: WTR::TestController::initializeInjectedBundlePath() (TestControllerQt.cpp:102) ==31701== by 0x4140A3: WTR::TestController::initialize(int, char const**) (TestController.cpp:312) ==31701== by 0x4136AA: WTR::TestController::TestController(int, char const**) (TestController.cpp:98) ==31701== by 0x40B52C: Launcher::launch() (main.cpp:61) Fixed the same case for EFL in r128327.
Attachments
Patch (1.86 KB, patch)
2012-09-12 22:57 PDT, Sudarsana Nagineni (babu)
ossy: review+
ossy: commit-queue-
Patch (1.86 KB, patch)
2012-09-13 00:26 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-09-12 22:57:53 PDT
Csaba Osztrogonác
Comment 2 2012-09-12 23:20:27 PDT
Comment on attachment 163780 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=163780&action=review LGTM, r=me with some nit. > Tools/ChangeLog:3 > + [QT] [WK2] Memory leaks in Qt's TestRunner s/[QT] [WK2]/[Qt][WK2]/ > Tools/ChangeLog:8 > + Fix memory leaks in QT's TestRunner code by adopting WKString s/QT/Qt/
Sudarsana Nagineni (babu)
Comment 3 2012-09-13 00:26:02 PDT
Created attachment 163799 [details] Patch Fixed nits. Thanks for reviewing, Ossy.
WebKit Review Bot
Comment 4 2012-09-13 01:14:29 PDT
Comment on attachment 163799 [details] Patch Clearing flags on attachment: 163799 Committed r128419: <http://trac.webkit.org/changeset/128419>
WebKit Review Bot
Comment 5 2012-09-13 01:14:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.