[Qt][WK2] Memory leaks in Qt's TestRunner https://bugs.webkit.org/show_bug.cgi?id=96603

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-09-13
Reviewed by Csaba Osztrogonác.

Fix memory leaks in Qt's TestRunner code by adopting WKString
created with WKStringCreateWithUTF8CString().

* WebKitTestRunner/qt/TestControllerQt.cpp:
(WTR::TestController::initializeInjectedBundlePath):
(WTR::TestController::initializeTestPluginDirectory):

Canonical link: https://commits.webkit.org/114505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128419 268f45cc-cd09-0410-ab3c-d52691b4dbfc